# EirenesEigens

./: CLEANUP_TODO.md  Cargo.toml  DEMO.md  DEPLOY_RAVEN_FILE.md  HTTP_CLIENT_README.md  IMPLEMENTATION_SUMMARY.md  MISSION.md  NEXT_PHASE.md  PACKAGE_MANAGER_GUIDE.md  PHASE4-README.md  PROJECT_TRACKING.md  Q1_2026_PROGRESS.md  Q1_2026_SESSION_2.md  Q1_2026_SESSION_3.md  Q1_2026_SESSION_4.md  QUICKSTART.md  README-OLD.md  README.md  REGISTRY_TEST_REPORT.md  ROADMAP_Q1_2026.md  STATUS.md  SUMMARY.md  audit-top-20.json  demo-auth.html  demo-chat-client.html  demo-chat-server.js  demo-compiler.html  demo-components.html  demo-counter.html  demo-fullstack-client.html  demo-fullstack-server.js  demo-hmr.html  demo-http.html  demo-orm.html  demo-package-manager.html  demo-wasm-counter.html  demo-wasm.html  docs-consolidation-plan.md  package-lock.json  package.json  (+22 more)
aloha-shirts/: raven.toml
archive/: DOCUMENTATION_AUDIT_SUMMARY.md  README.md  ROADMAP_Q1_2026.md  STATUS.txt
benches/: compiler_bench.rs
docs/: GETTING_STARTED.md  README.md  changelog.md  contributing.md
docs-site/: DEPLOYMENT.md  Dockerfile  README.md  build.js  fly.toml  index.html  nginx.conf  vercel.json
examples/: ANALYTICS_README.md  DEPLOYMENT_GUIDE.md  HOW_TO_RUN.md  analytics_dashboard.css  analytics_dashboard.raven  array_indexing.raven  array_indexing.wasm  array_literals.raven  array_literals.wasm  array_methods.raven  array_methods.wasm  assignment_while.raven  assignment_while.wasm  closure_syntax.raven  comparisons.raven  comparisons.wasm  counter-simple.raven  counter-v2.raven  counter.raven  counter.wat  enum_simple.raven  enum_simple.wasm  error_examples.rs  fibonacci.raven  field_access.raven  field_access_simple.raven  fn_return_type.raven  fn_with_params.raven  for_in_loop.raven  for_loops.raven  for_loops.wasm  generics.raven  generics_syntax.raven  generics_syntax.wasm  hello.raven  http_client_demo.rs  impl_blocks.raven  iterator_for_in_syntax.raven  json_usage.raven  lifetimes_syntax.raven  (+41 more)
examples/chatwave/backend/: Cargo.toml  schema.sql
examples/chatwave/backend/src/: main.rs
pr-stubs/: docs-consolidate.md  docs-reference.md  docs-tutorial.md
registry/: .dockerignore  .env.example  .gitignore  COMPILER_BRIDGE_DESIGN.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  QUICK_START.md  README.md  REGISTRY_STATUS_SUMMARY.md  WHATS_LEFT.md  deploy.sh  fly.toml
registry/aloha-shirts/raven-ui/: README.md  raven.toml
registry/aloha-shirts/raven-ui/src/: lib.raven
registry/aloha-shirts/raven-ui/src/components/: Button.raven  Card.raven  Input.raven
registry/migrations/: 20251017_init.sql
registry/src/: auth.rs  db.rs  error.rs  main.rs  models.rs  rate_limit.rs  validation.rs
registry/src/handlers/: auth.rs  mod.rs  packages.rs  search.rs  stats.rs  users.rs
runtime/: index.html  ravensone.js  serve.sh
scripts/: build-for-deployment.sh  compile-wasm.js  debug-helper.js  docs-check.mjs  hmr-server.js  rpm.js
src/: ai_generator.rs  animation.rs  ast.rs  borrow_checker.rs  code_splitter.rs  codegen.rs  deployer.rs  diagnostics.rs  errors.rs  forms.rs  hydration.rs  js_emitter.rs  js_minifier.rs  lexer.rs  lib.rs  macros.rs  main.rs  parser.rs  profiler.rs  reactive.rs  registry_client.rs  router.rs  rpc_generator.rs  semantic_analyzer.rs  sourcemap.rs  ssr.rs  token.rs  type_checker.rs  types.rs  vdom.rs  wasm_runtime.rs
src/hmr/: mod.rs
templates/: debug.html
test-project/: .gitignore  raven.json
(+210 files in other folders)
