[package]
name = "ravensone"
version = "0.1.0"
edition = "2021"
description = "The RavensOne language compiler and toolchain"

[lib]
name = "ravensone_compiler"
path = "src/lib.rs"

[[bin]]
name = "raven"
path = "src/main.rs"

[dependencies]
lazy_static = "1.4.0"
clap = { version = "4.5.4", features = ["derive"] }
wasm-encoder = "0.201.0"
serde_json = "1.0"