[package]
name = "ravensone"
version = "0.1.0"
edition = "2021"
description = "The RavensOne language compiler and toolchain"

[lib]
name = "ravensone_compiler"
path = "src/lib.rs"

[[bin]]
name = "raven"
path = "src/main.rs"

[[example]]
name = "error_examples"
path = "examples/error_examples.rs"

[[bench]]
name = "compiler_bench"
path = "benches/compiler_bench.rs"
harness = false

[dependencies]
lazy_static = "1.4.0"
clap = { version = "4.5.4", features = ["derive"] }
wasm-encoder = "0.201.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
notify = "6.1"
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
semver = "1.0"
rpassword = "7.3"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
base64 = "0.21"
dirs = "5.0"
urlencoding = "2.1"