[package]
name = "ravensone-registry"
version = "0.1.0"
edition = "2021"
authors = ["RavensOne Team"]

[[bin]]
name = "registry-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Authentication & Security
argon2 = "0.5"
jsonwebtoken = "9.2"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Validation
validator = { version = "0.16", features = ["derive"] }
semver = "1.0"

# HTTP client (for downloading packages)
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenvy = "0.15"

# File handling
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"

# Rate limiting
governor = "0.6"

[dev-dependencies]
axum-test = "14.0"
